{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 84,
  "lineage": "2ecf288d-9c7d-4278-6faa-d9b1c8db3518",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c102d80643926211",
            "domain": "vpc",
            "id": "eipalloc-03c51e557e9543c00",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-084879e41d4ce350a",
            "private_dns": "ip-10-0-0-142.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.142",
            "public_dns": "ec2-54-199-58-109.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.199.58.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d28faae2e9e7138",
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:instance/i-034374b76740b506d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034374b76740b506d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2dad88da13b5205",
            "private_dns": "ip-10-0-1-53.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-54-248-5-36.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.5.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c4fdebd1ed142773",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0954d91216a2e8afe",
            "tags": {
              "Name": "bastionredis"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02fcbb6fda884cb01"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-redis",
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:internet-gateway/igw-059c3f5b678e729dc",
            "id": "igw-059c3f5b678e729dc",
            "owner_id": "714496244121",
            "tags": {
              "Name": "redis-igw"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "redisnw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:714496244121:targetgroup/Redis-target/8371387129bc5dc6",
            "arn_suffix": "targetgroup/Redis-target/8371387129bc5dc6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:714496244121:targetgroup/Redis-target/8371387129bc5dc6",
            "lambda_multi_value_headers_enabled": false,
            "name": "Redis-target",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "redis"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c51e557e9543c00",
            "id": "nat-0446e451a247b1472",
            "network_interface_id": "eni-084879e41d4ce350a",
            "private_ip": "10.0.0.142",
            "public_ip": "54.199.58.109",
            "subnet_id": "subnet-0bdc97ea48bc1db16",
            "tags": {
              "Name": "Redis-NG"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bcae33cefff55b76",
            "owner_id": "714496244121",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0446e451a247b1472",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Redis-priva"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09c9984e548c3afea",
            "owner_id": "714496244121",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059c3f5b678e729dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Redis-pub"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b555ce9ea31459",
            "route_table_id": "rtb-0bcae33cefff55b76",
            "subnet_id": "subnet-0020a5018b8e1a173"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.rtb-private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb474a496435eef",
            "route_table_id": "rtb-0bcae33cefff55b76",
            "subnet_id": "subnet-0fd9192a5fce0bdef"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.rtb-private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03409c8755fd12521",
            "route_table_id": "rtb-09c9984e548c3afea",
            "subnet_id": "subnet-0bdc97ea48bc1db16"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb46eea2a9044844",
            "route_table_id": "rtb-09c9984e548c3afea",
            "subnet_id": "subnet-0954d91216a2e8afe"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:security-group/sg-0c8193c3d5009e4bd",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8193c3d5009e4bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.53/32"
                ],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "714496244121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allowssh and tcp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:security-group/sg-02fcbb6fda884cb01",
            "description": "allows all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fcbb6fda884cb01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Bastion-SG",
            "name_prefix": "",
            "owner_id": "714496244121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:subnet/subnet-0020a5018b8e1a173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0020a5018b8e1a173",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714496244121",
            "tags": {
              "Name": "redis-priv1a"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:subnet/subnet-0fd9192a5fce0bdef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0fd9192a5fce0bdef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714496244121",
            "tags": {
              "Name": "redis-priv2c"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:subnet/subnet-0bdc97ea48bc1db16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bdc97ea48bc1db16",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714496244121",
            "tags": {
              "Name": "redis-pub1a"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:subnet/subnet-0954d91216a2e8afe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0954d91216a2e8afe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714496244121",
            "tags": {
              "Name": "redis-pub2c"
            },
            "vpc_id": "vpc-0c49a3b4ad0c5ef50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714496244121:vpc/vpc-0c49a3b4ad0c5ef50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d665ce0e8fdf6770",
            "default_route_table_id": "rtb-0df36350bf9f34122",
            "default_security_group_id": "sg-0e840876c5450f244",
            "dhcp_options_id": "dopt-d9717ebe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c49a3b4ad0c5ef50",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df36350bf9f34122",
            "owner_id": "714496244121",
            "tags": {
              "Name": "Redis-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}